# SPLN

./: README.md
TPC1/: README.md  ex.txt  tpc1.py
TPC2/: README.md  test.txt  tpc2.py
TPC3/: README.md
TPC3/ftk/: .gitignore  base.py
TPC4/: README.md  pyproject.toml
TPC4/ftk/: .gitignore  __main__.py  base.py
TPC5/: README.md  tpc5_1.py
TPC6/: README.md  tpc6.py
